--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -3,8 +3,8 @@ body {
 }
 
 #main_content {
-  width:800px;
-  margin:0 auto;
+  width: 800px;
+  margin: 0 auto;
 }
 
 header {
@@ -17,10 +17,10 @@ header {
   float: left;
 }
 
-.team1 {
-  background-color: gray;
+.tomato {
+  background-color: rgb(205, 30, 30);
 }
 
-.team2 {
-  background-color: gray;
+.plum {
+  background-color: rgb(119, 18, 144);
 }
